# platform_bootable_recovery

./: Makefile.am  adb_install.cpp  configure.ac  install.cpp  recovery.cpp  roots.cpp  ui.cpp  verifier.cpp
edify/: main.c  parser.y
minelf/: Retouch.h
minzip/: DirUtil.c  Zip.c
updater/: install.c  updater.c
